Fix to landing, attempted fix for text overflow on iPad

--- a/styles/LandingMain.module.css
+++ b/styles/LandingMain.module.css
@@ -82,4 +82,8 @@
     font-size: x-small;
     margin-top: 2em;
   }
+  .gridItem {
+    grid-column: 1;
+    grid-row: 5;
+  }
 }
